--- a/style.css
+++ b/style.css
@@ -23,15 +23,21 @@ button {
     font-family: Arial, Helvetica, sans-serif
 }
 
-.save-btn {
-    position: fixed;
-    bottom: 20px; 
+.side-btns {
+    position: fixed; 
     right: 20px;  
+    bottom: 20px;
     z-index: 10;
+    display: flex;
+    flex-direction: column;
+}
+
+.side-btn {
     padding: 5px 10px;
     border: 1px solid white;
     border-radius: 10px;
     background-color: rgb(131, 131, 133);
     font-size: xx-large;
     cursor: pointer;
+    margin: 5px;
 }
