--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     color: white;
     background-color: #474444;
+    display: flex;
 }
 
 .container {
@@ -23,15 +24,6 @@ button {
     font-family: Arial, Helvetica, sans-serif
 }
 
-.side-btns {
-    position: fixed; 
-    right: 20px;  
-    bottom: 20px;
-    z-index: 10;
-    display: flex;
-    flex-direction: column;
-}
-
 .side-btn {
     padding: 5px 10px;
     border: 1px solid white;
@@ -40,4 +32,10 @@ button {
     font-size: xx-large;
     cursor: pointer;
     margin: 5px;
+    width: 80%;
+}
+
+.side-bar {
+    background-color: antiquewhite;
+    text-align: center;
 }
